=====================================
   m l U n i t   C H A N G E L O G
=====================================

mlUnit 1.6.5 (in development)
-----------------------------

  - Fix: eps comparison for vectors yields undetermined results
  - Fix: eps comparison fails for vectors of incompatible types, e.g. double and
    uint8. Changed assert_equals to compare eps only for equal numeric types.


mlUnit 1.6.4 (2013-05-27)
-------------------------

  - Removed install.m script. Content not needed, since assert can not get
    shadowed anymore.
  - assert_true and assert_false may be called without arguments, in which case
    they pass or fail respectively.
  - assert_equals and assert_equals_withequalnans can receive an absolute
    tolerance to handle slight differences equally.
  - assert_warning checks for a specific warning when executing a function.
  - Updated m2html documentation.

  - Fix: license strings
  - Fix: stack trace filter for assert functions did not include newer
    assert wrappers
  - Fix: Failed on missing subclass argument.
  - Fix: gui_test_runner failed on a callback invocation with empty handles for
    MATLAB R2008b. Reported as [#15].
  - Fix: MATLAB shadow warning on assert function. Reported as [#17].
    Testcases must be migrated to use assert_true instead.

    [#15] https://sourceforge.net/p/mlunit/bugs/15/
    [#17] https://sourceforge.net/p/mlunit/bugs/17/


mlUnit 1.6.3 (2012-07-13)
-------------------------

  - Provide assert_equals methods that equal NaN values. #2873.
  - Fix: Do not indent raw text in XML generation. #2874.


mlUnit 1.6.2 (2012-07-12)
-------------------------

  - Refactored XML generation.
  - Fix: XML head tag.


mlUnit 1.6.1 (2012-06-18)
-------------------------

  - Support for shallow and recursive path dependencies in Ant mlUnit task.
  - Support for executing additional MATLAB commands from Ant mlUnit task.
  - Fix: Empty relative directory yielded ugly dot.