@@ -48,6 +48,7 @@ filtered_files = {'assert_true', ...
                   'assert_warning', ...
                   'assert_equals_withequalnans', ...
                   'assert_not_equals_withequalnans', ...
+                  'abstract_assert_equals', ...
                   'fail'};
 while ~isempty(stack) && any(strcmpi(stack(1).filename, filtered_files))
     stack(1)=[];
